Conditionally render Google Optimize Anti Flicker script

--- a/wrapper.html
+++ b/wrapper.html
@@ -4,7 +4,7 @@
 	{% endif %}>
 
 <head>
-
+	{% if page.custom_fields.enable_google_optimize == 'Y' %}
 	<!-- Google Optimise Anti-flicker snippet -->
 	<script>
 		dataLayer = [];
@@ -32,6 +32,7 @@
 			'GTM-MNNGDHL': true
 		});
 	</script>
+	{% endif %}
 
 	{% if page.custom_fields.page_disable_gtm != 'Y' %}
 	<!-- Google Tag Manager -->
@@ -205,7 +206,7 @@
 	<script src="https://dbqvwi2zcv14h.cloudfront.net/images/respond.js"></script>
 <![endif]-->
 	{% block script_additions %}{% endblock %}
-	
+
 	{% if page.custom_fields.page_add_regional_fb_pixel %}
 	<!-- Facebook Pixel Code -->
 	<script>
@@ -254,7 +255,7 @@
 			{% endif %}
 			fbq('track', 'PageView');
 	</script>
-		
+
 		<noscript>
 			{% if page.custom_fields.page_add_regional_fb_pixel == '350 Global' %}
 			<img height="1" width="1" style="display:none"
@@ -296,7 +297,7 @@
 	<!-- End Facebook Pixel Code -->
 
 	{% endif %}
-	
+
 	<!-- Hotjar Tracking Code -->
 	<script>
 		(function (h, o, t, j, a, r) {
@@ -371,7 +372,7 @@
 			</nav>
 		</div>
 	</div>
-	
+
 	{% endif %}
 	{% include "./language_picker.html" %}
 	<script type="text/javascript">
@@ -610,7 +611,7 @@
 	<div id="body-mobile-background"></div>
 	{% block scripts %}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
-	
+
 	<!-- scripts to all be moved here. -->
 	{% endblock %}
 </body>
