--- a/wrapper.html
+++ b/wrapper.html
@@ -136,26 +136,34 @@
 	<meta name="twitter:site:id" content="{{ templateset.custom_fields.site_url }}" />
 
 	{% block meta_additions %}{% endblock %}
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	{% if page.type != "Donation" %}
 	<!-- Mapbox GL Source -->
 	<script src='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js'></script>
 	<link href='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
 	<!-- End -->
 
-	<!--JQuery UI CSS-->
+	<!--JQuery UI Source-->
 	<link href='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css' rel='stylesheet' />
+	<script
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+  crossorigin="anonymous"></script>
 	<!--End-->
 
 	<!--TimePicker CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css"/>
 	<!--End-->
 
-
-
-
-
 	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css?v=2018091408552'
 		type='text/css' media='screen' />
+
+	{% else %}
+		<!-- Defer loading ak-v3.css file for Donation pages -->
+		<link rel="preload" id='baseline-css' href="https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css?v=2018091408552" as="style" onload="this.onload=null;this.rel='stylesheet'">
+		<noscript><link rel="stylesheet" href="https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css?v=2018091408552"></noscript>
+	{% endif %}
+
 	<link rel='stylesheet' href='https://dbqvwi2zcv14h.cloudfront.net/ak/custom.css' type='text/css' media='screen' />
 
 	{% if templateset.custom_fields.site_addl_css_url %}
@@ -167,39 +175,35 @@
 	<link rel='stylesheet' id='baseline-rtl-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3-rtl.css'
 		type='text/css' media='all' />
 	{% endif %}
-
+	<!-- If custom WebP URL is set, use WebP with the page_background_image as a fallback. Else just use page_background_image. -->
+	{% if page.custom_fields.page_background_image %}
 	<style>
-		{
-			% if page.custom_fields.page_background_image %
-		}
-
-		#body-mobile-background {
-			background-color: {
-					{
-					templateset.custom_fields.color_page
+		{% if page.custom_fields.page_background_image_webp_url %}
+			@supports not (background-image: url('{{ page.custom_fields.page_background_image_webp_url }}')) {
+				#body-mobile-background {
+					background-image: url('{{ page.custom_fields.page_background_image }}');
 				}
 			}
-
-			;
-			background-image:url({{ page.custom_fields.page_background_image }});
-		}
-
-			{
-			% endif %
-		}
+			@supports (background-image: url('{{ page.custom_fields.page_background_image_webp_url }}')) {
+				#body-mobile-background {
+					background-image: url('{{ page.custom_fields.page_background_image_webp_url }}');
+				}
+			}
+		{% else %}
+			#body-mobile-background {
+				background-color: '{{ templateset.custom_fields.color_page }}';
+				background-image: url('{{ page.custom_fields.page_background_image }}');
+			}
+		{% endif %}
 	</style>
-
+	{% endif %}
 	{% block css_additions %}{% endblock %}
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-  crossorigin="anonymous"></script>
+
 	<script type="text/javascript" src="https://act.350.org/resources/actionkit.js"></script>
-		<!--Recaptcha-->
-	   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+	{% if page.type != "Donation" %}
 	<!--Timepicker JS-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+	{% endif %}
 	<!--[if lte IE 9]>
 	<link href="https://dbqvwi2zcv14h.cloudfront.net/images/ak-v3-ie9.css" rel="stylesheet" type="text/css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -483,7 +487,7 @@
 	});
 	</script>
 
-	<script src="https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.js"></script>
+	<script {% if page.type == "Donation" %} async defer {% endif %} src="https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.js"></script>
 	{% if page.custom_fields.form_include_college %}
 	{% comment %} Select menu plugin for huge select menus: https://harvesthq.github.com/chosen/ {% endcomment %}
 	<link rel="stylesheet" type="text/css" href="//dbqvwi2zcv14h.cloudfront.net/images/chosen.css" />
@@ -590,7 +594,9 @@
 	<script>
 		startTime = new Date()
 	</script>
+	{% if page.type != "Donation" %}
 	<script src="https://350map.org/main.js"></script>
+	{% endif %}
 	{% endif %}
 	{% endif %}
 	{% endif %}
