fix: add space to master

--- a/event_create_field_set.html
+++ b/event_create_field_set.html
@@ -56,7 +56,7 @@
 
 	{% if page.custom_fields.event_alternate_venue_label %}
 
-	{{page.custom_fields}}
+	{{page}}
 		<script>
 			$(function(){
 				$('label[for="id_event_venue"]').html('{{ page.custom_fields.event_alternate_venue_label }}');
