final changes to recurring update and recurring cancel

--- a/recurring_update.html
+++ b/recurring_update.html
@@ -365,6 +365,9 @@ function disable_invisibles(form) {
     max-width: 300px;
     margin: 0 auto;
 }
+.ak-pagetype-recurring_update .action_form a.update {
+    display: inline !important;
+}
 @media screen and (max-width: 900px) {
     .ak-pagetype-recurring_update .ak-change-amount,
     .ak-pagetype-recurring_update .ak-change-cc,
