--- a/recurring_info.html
+++ b/recurring_info.html
@@ -20,7 +20,7 @@
                 </div>
                 {% if not profile.is_import_stub %}
                 <div>
-                    <a href = "/cms/pledge/cancel/monthly/">Cancel donation</a>
+                    <a class="update" style="display:none" href = "/cms/pledge/cancel/monthly/">Cancel donation</a>
                 </div>
                 {% endif %}
             </div>
@@ -35,7 +35,7 @@
                     {{ profile.amt }}
                 </div>
                 <div>
-                    {%if not profile.is_import_stub %}<a href="#" onclick="return ak_recurring_change_amount('{{ profile.id }}');" class="ak-change-amount-link">Change amount</a>{% endif %}
+                    {%if not profile.is_import_stub %}<a style="display:none;" href="#" onclick="return ak_recurring_change_amount('{{ profile.id }}');" class="ak-change-amount-link update">Change amount</a>{% endif %}
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
                     Expiration {{ profile.display_expiration_date }}
                 </div>
                 <div>
-                   {%if not profile.is_import_stub %} <a href="#" onclick="return ak_recurring_change_card('{{ profile.id }}');">Change credit card information</a>{% endif %}
+                   {%if not profile.is_import_stub %} <a style="display: none;" class="update" href="#" onclick="return ak_recurring_change_card('{{ profile.id }}');">Change credit card information</a>{% endif %}
                 </div>
             </div>
         </div>
